# django-betterforms

./: CHANGES.rst  Makefile  README.rst  manage.py  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: ci.yml
betterforms/: changelist.py  forms.py  multiform.py  tests.py  views.py
betterforms/templatetags/: betterforms_tags.py
docs/: conf.py
tests/: forms.py  models.py  requirements.txt  settings.py  sqlite_test_settings.py  tests.py  urls.py
